Revert "Merge branch 'graalvm:master' into master"
This reverts commit ff6a22ea232e518e30bbb42a846e2dd75f9616aa, reversing
changes made to df9643d94b1388bbe3c352ee76acdf1a8a464841.