@@ -30,7 +30,7 @@
  *          java.management/com.sun.jmx.remote.security
  * @run clean RMIAltAuthTest
  * @run build RMIAltAuthTest SimpleStandard SimpleStandardMBean
- * @run main/othervm -Djava.security.manager=allow RMIAltAuthTest
+ * @run main RMIAltAuthTest
  */
 
 import java.io.File;
